Added images, updated homepage styles

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -13,6 +13,7 @@ $fontFamily: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 
 $largestFontSize: 32px;
 $h1FontSize: 24px;
+$mediumFontSize: 20px;
 $h2FontSize: 18px;
 $regularFontSize: 16px;
 
