--- a/css/header.scss
+++ b/css/header.scss
@@ -8,41 +8,46 @@
 		color: $black;
 	}
 
-	.donateAndLanguageButtons{
-		float: right;
-		position: absolute;
-		z-index: 1000;
-		right: 0;
-
-		a {
-			margin:0 20px;
-			padding-top:10px;
-			display: inline-block;
-			text-align: center;
-			font-weight: bold;
-			text-decoration: none;
-		}
-
-		.donate {
-			color: $white;
-			background-color: $lightBlue;
-			border-bottom-left-radius: 4px;
-			border-bottom-right-radius: 4px;
-			width: 113px;
-			height: 46px;
-		}
-
-		.languages{
-			margin: 0 40px 0 20px;
-		}
-	}
-
 	.navbar {
 		border: none;
 		height: 120px;
 
-		.container-fluid {
+		.donateAndLanguageButtons{
+			float: right;
+			position: absolute;
+			z-index: 1337;
+			right: 0;
+
+			a {
+				margin:0 20px;
+				padding-top:10px;
+				display: inline-block;
+				text-align: center;
+				font-weight: bold;
+				text-decoration: none;
+			}
+
+			.donate {
+				color: $white;
+				background-color: $lightBlue;
+				border-bottom-left-radius: 4px;
+				border-bottom-right-radius: 4px;
+				width: 113px;
+				height: 46px;
+			}
+
+			.donate:hover {
+				background-color: $red;
+			}
+
+			.languages{
+				margin: 0 40px 0 20px;
+			}
+		}
+
+		.container {
 			height: 120px;
+			position: relative;
 
 			.navbar-collapse {
 				height: 120px;
